<resources>
    <string name="app_name">KEA Bank</string>
    <string name="amount">%.2f</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="date_today">Today</string>
    <string name="new_account">New Account</string>
    <string name="payments">Payments</string>
    <string name="transfer">Transfer</string>
    <string name="text_transaction_balance_after">balance: %.2f</string>

    <string name="item_manual_account_id">Enter Account ID</string>
    <string name="label_amount">Amount</string>
    <string name="label_due_date">Due Date</string>
    <string name="label_from">From</string>
    <string name="label_target">Target</string>
    <string name="label_title">Title</string>
    <string name="label_message">Message</string>

    <string name="label_transaction_type">Type</string>
    <string name="label_transaction_status">Status</string>
    <string name="label_transaction_target_account">Account</string>
    <string name="label_transaction_date">Date</string>
    <string name="label_transaction_id">Reference ID</string>

    <string name="transaction_error_source">Error: Source Account not found</string>
    <string name="transaction_error_destination_invalid">Account not found</string>
    <string name="transaction_error_destination_internal">Error: Destination Account not found</string>
    <string name="transaction_error_same_target">Source and Destination accounts cannot be the same account</string>
    <string name="transaction_error_type">Error: Type selection failed</string>
    <string name="transaction_error_date">Error: Date selection failed</string>
    <string name="transaction_error_message_short">Message too short! Must have at least %d letters</string>
    <string name="transaction_error_message_long">Message too long! Must have at most %d letters</string>
    <string name="transaction_error_amount_negative">Amount cannot have a negative value</string>
    <string name="transaction_error_amount_invalid">Amount is invalid</string>
    <string name="transaction_error_unexpected">Unexpected Error: %s</string>
    <string name="transaction_error_empty_field">Field \'%s\' cannot be empty</string>

    <string name="prompt_bill_select_bill">Select Bill</string>
    <string name="text_bill_recurrent">This bill is recurrent</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_short">Password too short! Must have at least %d characters</string>
    <string name="error_password_long">Password too long! Must have at most %d characters</string>
    <string name="error_username_short">Username too short! Must have at least %d characters</string>
    <string name="error_username_Long">Username too long! Must have at most %d characters</string>
    <string name="error_account_not_found">This NemID does not exist</string>
    <string name="error_nemid_no_customer">This NemID is not associated with any customer</string>
    <string name="action_logout">Log Out</string>
    <string name="action_confirm">Confirm</string>
    <string name="error_existing_customer">A customer with this NemID already exists</string>
    <string name="info_existing_nemid_attachment">Customer will be attached to the existing NemID</string>
    <string name="info_new_nemid">A new NemID will be added on creation</string>
    <string name="error_name_short">This name is too short, needs at least %d characters</string>
    <string name="error_name_long">This name is too long, needs at most %d characters</string>
    <string name="action_change_password">Change Password</string>
    <string name="text_password_reset">Password Reset</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="text_name">Name: %s</string>
    <string name="text_birthdate">Birth Date: %s</string>
    <string name="error_passwords_no_match">Passwords do not match</string>
    <string name="error_pension_account_min_age">Withdraws from a pension account can only be made after the age of %d</string>
    <string name="actions_monthly_transfer">Set up as a monthly transfer</string>
    <string name="error_invalid_nemid">Invalid NemID</string>
    <string name="text_bill_label">Bill</string>
    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="action_payment_service">Register to Payment Service</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="birth_date_label">Birth Date</string>
    <string name="nemid_hint">NemID</string>
    <string name="action_submit_registration">Submit Registration</string>
    <string name="dialog_confirm_customer_register">Are you sure you want to create this account:\nName: %s %s\nBirth Date: %s\nNemID Username: %s?\n
        Note: This app will request the device\'s location to assign the closest affiliate. If the permission is denied, the affiliate in Copenhagen will be chosen.</string>
    <string name="action_affiliate_set">Setting affiliate to %s</string>
    <string name="text_affiliate">Affiliate: %s</string>
</resources>
