<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account" />

        <Button
            android:id="@+id/btn_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startPaymentActivity"
            android:text="@string/payments" />

        <Button
            android:id="@+id/btn_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startTransferActivity"
            android:text="@string/transfer" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_accounts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_accounts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fadingEdgeLength="40dp"
            android:requiresFadingEdge="vertical"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_account" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="debugResetDatabase"
        android:text="DEBUG_RESETDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>